syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Sends multiple greetings with delays
  rpc SayHelloManyTimes (HelloRequest) returns (stream HelloReply) {}

  // Sends a greeting to all senders
  rpc sayHellToAll (stream HelloRequest) returns (HelloReply) {}

  // Sends greetings in multiple langs to all senders
  rpc sayHelloToAllInAllLangs (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
